--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "11.6.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "5.2.0",
+    "@mui/material": "5.2.0",
+    "@mui/system": "5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.0.2",
